--- a/bootstrap/css/maqueta6.css
+++ b/bootstrap/css/maqueta6.css
@@ -5,9 +5,20 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+
+#nav {
+    background-color: blueviolet;
+}
 #caja {
     
     border: 2px solid;
+    
+    
+}
+.img-fluid {
+    max-width: 100%;
+    height: auto;
 }
 
 #titulo h1 {
@@ -30,26 +41,24 @@
 }
 #caja6 {
     position: relative;
-    bottom: 20px;
+    
 }
 #caja7 {
     position: relative;
-    bottom: 20px;
+    
+    
     
 }
 #caja8 {
     position: relative;
-    bottom: 20px;
     
 }
 #caja9 {
     position: relative;
-    bottom: 20px;
     
 }
 #caja10 {
     position: relative;
-    bottom: 20px;
     
 }
 @media screen and (max-width: 768px) {
